<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SAVANT</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create__site">Create Site</string>
    <string name="siteName">Site Name:</string>
    <string name="hint_municipality">Enter municipality here</string>
    <string name="title_activity_splash_screen">Splash_screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_view__site">View_Site</string>
    <string name="title_activity_splash">Splash</string>
    <string name="action_search">Search</string>
    <string name="undefined">Undefined</string>
    <string name="not_applicable">N/A</string>
    <string name="sensitivity_all_caps">SENSITIVITY</string>
    <string name="exposure_all_caps">EXPOSURE</string>
    <string name="adaptive_capacity_all_caps">ADAPTIVE CAPACITY</string>
    <string name="title_activity_list_sites">ListSitesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="site_placeholder">Site Name</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="title_activity_survey_answers">SurveyAnswersActivity</string>

</resources>
